<resources>
    <string name="app_name">WoolRim</string>
    <string name="voice_search">울림으로 검색</string>
    <string name="show_list">시 목록 보기</string>
    <string name="record_poem">시 녹음 하기</string>
    <string name="play">재생</string>
    <string name="pause">일시정지</string>
    <string name="record_complete_kr">녹음완료</string>
    <string name="sign_up_kr">회원가입</string>
    <string name="want_poem">원하는 시를 입력해주세요.</string>
    <string name="poetry">  계절이 지나가는 하늘에는\n
                            가을로 가득 차 있습니다.\n\n

                            나는 아무 걱정도 없이\n
                            가을 속의 별들을 다 헬 듯합니다.\n\n

                            가슴 속에 하나 둘 새겨지는 별을\n
                            이제 다 못 헤는 것은\n
                            쉬이 아침이 오는 까닭이요,\n
                            내일 밤이 남은 까닭이요,\n
                            아직 나의 청춘이 다하지 않은 까닭입니다.\n\n

                            별 하나에 추억과\n
                            별 하나에 사랑과\n
                            별 하나에 쓸쓸함과\n
                            별 하나에 동경과\n
                            별 하나에 시와\n
                            별 하나에 어머니, 어머니,\n\n

                            어머님, 나는 별 하나에 아름다운 말 한마디씩 불러 봅니다.
                            소학교 때 책상을 같이 했던 아이들의 이름과,
                            패, 경, 옥, 이런 이국 소녀들의 이름과,
                            벌써 아기 어머니 된 계집애들의 이름과,
                            가난한 이웃 사람들의 이름과, 비둘기, 강아지, 토끼, 노새, 노루, 프랑시스 잠, 라이너 마리아 릴케
                            이런 시인의 이름을 불러 봅니다.\n\n

                            이네들은 너무나 멀리 있습니다.\n
                            별이 아스라이 멀듯이.\n\n

                            어머님,\n
                            그리고 당신은 멀리 북간도에 계십니다.\n\n

                            나는 무엇인지 그리워\n
                            이 많은 별빛이 내린 언덕 위에\n
                            내 이름자를 써 보고\n
                            흙으로 덮어 버리었습니다.\n\n

                            딴은 밤을 새워 우는 벌레는\n
                            부끄러운 이름을 슬퍼하는 까닭입니다.\n\n

                            그러나 겨울이 지나고 나의 별에도 봄이 오면\n
                            무덤 위에 파란 잔디가 피어나듯이\n
                            내 이름자 묻힌 언덕 위에도\n
                            자랑처럼 풀이 무성할 거외다.</string>
    <string name="record_start">녹음하기</string>
    <string name="logo">Logo</string>
    <string name="replay">다시듣기</string>
    <string name="name_temp">사용자 이름</string>
    <string name="myrecord">나의울림</string>
    <string name="poet_temp">시인 이름</string>
    <string name="dash">-</string>
    <string name="poem_temp">시 이름</string>
    <string name="delete">delete</string>
    <string name="mymenu">MyMenu</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="please_fill">각각 채워야됩니다</string>
    <string name="please_poem">낭송하고 싶은 시를 입력하세요</string>
    <string name="search">검색</string>
    <string name="login_kr">로그인</string>
    <string name="logout_kr">로그아웃</string>
    <string name="my_page_kr">마이페이지</string>
    <string name="menu_kr">메뉴</string>
    <string name="bgm_select_kr">BGM 선택하기</string>
    <string name="complete_kr">완료</string>
    <string name="record_upload_kr">울림 업로드 신청하기</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ex_navi_header_user_name">ExampleMan</string>
    <string name="ex_navi_header_user_email">example.man@android.com</string>
    <string name="stu_id_kr">학번</string>
    <string name="password_kr">비밀번호</string>
    <string name="stuid_kr">학번(아이디)</string>
    <string name="university_kr">학교</string>
    <string name="name_kr">이름</string>
    <string name="incheon_kr">인천대학교</string>
    <string name="sing_up_waring_kr">※ 학교와 학번이 일치하지 않을 시, 봉사 활동 인증이 불가합니다.</string>
    <string name="woman_kr">여자</string>
    <string name="man_kr">남자</string>
    <string name="temp_folder_name">/WoolrimTemp/</string>
    <string name="request_code">RequestCode</string>
    <string name="guest">Guest</string>
    <string name="user">User</string>
    <string name="internet_connect_warning">인터넷 연결을 확인해주세요.</string>
    <string name="get_bongsa_time_kr">봉사점수 받기</string>
    <string name="upload_en">upload</string>
    <string name="default_time">00 : 00</string>
    <string name="timer_format">%02d : %02d</string>
    <string name="android_kr">안드로이드</string>
    <string name="android_en">Android</string>
    <string name="no_profile_en">NULL</string>
    <string name="delete_kr">삭제</string>
    <string name="bgm_en">BGM</string>
    <string name="limit_duration_warning_kr">※최대 녹음시간은 %d분 %d초 입니다.\n\t시간을 넘지 않게 녹음 해주세요</string>

</resources>
