<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/search_voice_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/voice_search"
        android:layout_weight="4" />

    <Button
        android:id="@+id/show_list_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/show_list"
        android:layout_weight="1" />

    <Button
        android:id="@+id/record_poem_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/record_poem" />

</LinearLayout>